2005-03-24 Alain Magloire
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/MemoryManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Memoryblock.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Target.java
	* mi/org/eclipse/cdt/debug/mi/core/command/MIShowEndian.java
	* mi/org/eclipse/cdt/debug/mi/core/output/MIShowEndianInfo.java

2005-03-23 Alain Magloire
	Changes in the CDI ICDIMemoryBlock && ICDIMemoryBlockManagement API.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/MemoryManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/MemoryBlock.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	
2005-03-09 Mikhail Khodjaiants
	Fix for bug 87546: Obsolete debug MI settings in Preference need to be removed.
	* RegisterManager.java
	* IMIConstants.java
	* MIPreferenceInitializer.java

2005-03-07 Alain Magloire
	Fix for 87230: base on  Jayaprakash ideas/patch
	On HP statck-list-frames answer contain not kosher strings
	* mi/org/eclipse/cdt/debug/mi/core/output/MIParser.java

2005-02-01 Alain Magloire
	Part of Fix for PR 84165
	We check in the expression is a number and
	add a "*" for address watchpoint
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-01-20 Mikhail Khodjaiants
	Fix for bug 83355: The disable/enable breakpoints durning debugging acts weird.
	* cdi\org\eclipse\cdt\debug\mi\core\cdi\model\Breakpoint.java
	* cdi\org\eclipse\cdt\debug\mi\core\cdi\BreakpointManager.java

2005-01-13 Alain Magloire
	PR 82764 Fix the the type parsing.
	* mi/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2005-01-10 Mikhail Khodjaiants
	PR 82601 changes to the memory block interface
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/ICDIMemoryBlock.java
	* mi/org/eclipse/cdt/debug/mi/core/output/MIMemory.java

2005-01-10 Alain Magloire
	Fix for PR 82506
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java
	* mi/org/eclipse/cdt/debug/mi/core/output/MIParser.java

2004-12-20 Alain Magloire
	Fix for PR 81019 for MacOsX