@@ -165,6 +165,7 @@ public class EventManager extends SessionObject implements ICDIEventManager, Obs
 				if (target != null) {
 					session.removeTargets(new Target[] { target });
 				}
+				cdiList.add(new ExitedEvent(session, (MIGDBExitEvent)miEvent));
 			} else if (miEvent instanceof MIDetachedEvent) {
 				cdiList.add(new DisconnectedEvent(session, (MIDetachedEvent)miEvent));
 			} else if (miEvent instanceof MIBreakpointDeletedEvent) {
